tests/NormalTests/paczka1/fuzzy1/26783655.err
Error in line 21: xa96xTa3Wf0 A225 20,8
Error in line 22: Ruuf52bZP A225 2,4
Error in line 9: O8LDLZJ A204 49,4
Error in line 30: O8LDLZJ S736 5,7
Error in line 33: O8LDLZJ A225 43,4
